tests/cfg/js/error/parse/parse_XXXasi6.js
/* from ECMAScript 5.0 */
if (a > b)
else c = d
